# how-to-use-zipper-with-cmake

./: .gitignore  .gitmodules  LICENSE  README.md
demo/: CMakeLists.txt  CMakePresets.json  main.cpp
demo/file/: test2.txt
